# toonamiaftermath-downlink

./: .dockerignore  .editorconfig  .gitignore  .markdownlint.json  .prettierrc  AUDIT.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  CREDITS.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  TROUBLESHOOTING.md  build.bat  build.sh  docker-compose.yml  eslint.config.js  mock_cli.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_dev.py  test_frontend.py  test_integration.py  test_logic.py  test_parse_extinf.py  test_synthetic_epg.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: baseline-python-ci.yml  ci.yml  docker-publish.yml
app/: server.py  xtreme_codes.py
unraid/: ToonamiAftermath-Downlink.xml  template.xml
web/: index.html
web/assets/: app.js  style.css
