[project]
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 95  # Slightly more flexible for this codebase
fix = true

[tool.ruff.lint]
# Enable recommended rules plus additional quality checks
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "PL",     # pylint
    "RET",    # flake8-return
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "RSE",    # flake8-raise
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
]

# Ignore specific rules that might be too strict for this project
ignore = [
    "PLR0913",  # Too many arguments (common in FastAPI)
    "T201",     # print statements (acceptable for this project)
    "PLR2004",  # Magic value used in comparison
    "B008",     # Do not perform function calls in argument defaults (FastAPI dependency injection)
    "PLR0911",  # Too many return statements (acceptable for API endpoints)
    "E501",     # Line too long (some strings are hard to break nicely)
    "PTH123",   # Path.open() vs open() (minor issue)
    "PLW2901",  # Loop variable overwritten (minor issue in this context)
    "PLC0415",  # Import not at top level (acceptable in exception handlers)
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["PLR2004"]  # Allow magic values in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
line-length = 95
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
